modules/load-balancer/main.tf
resource "aws_lb" "nginx_alb" {
  name               = "${var.project_name}-${var.region}-${var.environment}"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_web_sg.id]
  subnets            = var.subnets

  enable_deletion_protection = false

  tags = var.commom_tags
}

resource "aws_lb_target_group" "my_tg" {
  name     = "${var.project_name}-${var.region}-${var.environment}"
  port     = 80
  protocol = "HTTP"
  vpc_id   = var.vpc_id

  target_type = "ip" #  "instance" if using EC2 launch type
  tags        = var.commom_tags

  health_check {
    interval            = 30
    path                = "/"
    protocol            = "HTTP"
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200"
  }
}

resource "aws_security_group" "alb_web_sg" {
  name        = "${var.project_name}-${var.region}-${var.environment}"
  description = "Allow all inbound traffic"
  vpc_id      = var.vpc_id
  tags        = var.commom_tags

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_lb_listener" "nginx_listener" {
  load_balancer_arn = aws_lb.nginx_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.my_tg.arn
  }
}
